--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
-MONGO_URI = mongodb+srv://Raza:7110@cluster0.3zjum3v.mongodb.net/Store-API?retryWrites=true&w=majority
+MONGO_URI = mongodb+srv://Raza:7110@cluster0.3zjum3v.mongodb.net/?retryWrites=true&w=majority
+jwtSecret = "mysecret"
