Profile Routes fini✔️

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,4 @@
 MONGO_URI = mongodb+srv://Raza:7110@cluster0.3zjum3v.mongodb.net/?retryWrites=true&w=majority
 jwtSecret = "mysecret"
+githubClientID = "e7b91cf8fb1707815ce9"
+githubSecretID ="8f58e036bb891c088a6f315590da61872828c80c"
